@@ -1,11 +1,11 @@
 development:
   adapter: sqlite3
-  database: db/shopify_app.sqlite3
+  database: db/development.sqlite3
   pool: 5
 
 production:
   url: <%= ENV['DATABASE_URL'] %>
-  
+
 test:
   adapter: sqlite3
   database: "db/test.sqlite3"
