@@ -1,6 +1,6 @@
 ENV['RACK_ENV'] = 'test'
+ENV['SHOPIFY_REDIRECT_URI'] = 'http://localhost:4567'
 ENV['SECRET'] = 'secret'
-ENV['HOSTNAME'] = 'http://localhost:4567'
 
 require 'minitest/autorun'
 require 'rack/test'
