@@ -159,8 +159,8 @@ module Sinatra
 
       app.set :api_key, ENV['SHOPIFY_API_KEY']
       app.set :shared_secret, ENV['SHOPIFY_SHARED_SECRET']
+      app.set :redirect_uri, ENV['SHOPIFY_REDIRECT_URI']
       app.set :secret, ENV['SECRET']
-      app.set :hostname, ENV['HOSTNAME']
 
       app.use Rack::Flash, sweep: true
       app.use Rack::MethodOverride
@@ -181,7 +181,7 @@ module Sinatra
         provider :shopify,
                  app.settings.api_key,
                  app.settings.shared_secret,
-                 redirect_uri: app.settings.hostname + "/auth/shopify/callback",
+                 redirect_uri: app.settings.redirect_uri,
 
                  scope: app.settings.scope,
 
